css/style.css
/* ... */
.payment-radio input + label::before {
    content: '';
    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    display: inline-block;
    width: 17px;
    height: 17px;
    border: 1px solid #da8913;
    border-radius: 50%;
}
.payment-radio input + label::after {
    content: '';
    position: absolute;
    left: 4px;
    top: 50%;
    transform: translateY(-50%);
    display: inline-block;
    width: 11px;
    height: 11px;
    background: transparent;
    border-radius: 50%;
}

.payment-radio input:checked+label::after {
    background: #da8913;
}


/* Далее идет оформление чекбокса в современных браузерах, а также IE9 и выше.
Благодаря тому, что старые браузеры не поддерживают селекторы :not и :checked,
в них все нижеследующие стили не сработают. */

/* Прячем оригинальный чекбокс. */
.checkbox-create-account:not(checked) {
    position: absolute;
    opacity: 0;
}
.checkbox-accept:not(checked) {
    position: absolute;
    opacity: 0;
}


.checkbox-create-account:not(checked) + label {
    position: relative; /* будем позиционировать псевдочекбокс относительно label */
    padding: 0 0 0 35px; /* оставляем слева от label место под псевдочекбокс */
}
.checkbox-accept:not(checked) + label {
    position: relative; /* будем позиционировать псевдочекбокс относительно label */
    padding: 0 0 0 35px; /* оставляем слева от label место под псевдочекбокс */
}
/* Оформление первой части чекбокса в выключенном состоянии (фон). */
.checkbox-create-account:not(checked) + label:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 17px;
    height: 17px;
    border: 2px solid #45474b;
   /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
    background: transparent;
}
.checkbox-accept:not(checked) + label:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 17px;
    height: 17px;
    border: 2px solid #45474b;
    /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
    background: transparent;
}
/* Оформление второй части чекбокса в выключенном состоянии (переключатель). */
.checkbox-create-account:not(checked) + label:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 17px;
    height: 17px;
    border: 2px solid #45474b;
    /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
    background: transparent;
    box-shadow: 0 2px 5px rgba(0,0,0,.3);
    transition: all .2s; /* анимация, чтобы чекбокс переключался плавно */
}
.checkbox-accept:not(checked) + label:after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 17px;
    height: 17px;
    border: 2px solid #45474b;
    /* box-shadow: inset 0 2px 3px rgba(0,0,0,.2); */
    background: transparent;
    box-shadow: 0 2px 5px rgba(0,0,0,.3);
    transition: all .2s; /* анимация, чтобы чекбокс переключался плавно */
}
/* Меняем фон чекбокса, когда он включен. */
.checkbox-create-account:checked + label:before {
     background: #da8913;
 }
.checkbox-accept:checked + label:before {
    background: #da8913;
}
/* Сдвигаем переключатель чекбокса, когда он включен. */
/*.checkbox:checked + label:after {
    left: 26px;
}*/
/* Показываем получение фокуса. */
.checkbox-create-account:focus + label:before {
    box-shadow: 0 0 0 3px rgba(255,255,0,.5);
}
.checkbox-accept:focus + label:before {
    box-shadow: 0 0 0 3px rgba(255,255,0,.5);
}

.proceed-checkbox a {
    color: #da8913;
}

.shipping label {
    padding-right: 35px;
}
.leftpart {
    float: left;
    width: 50%;
}
.leftpart h2 {
    padding-bottom: 52px;
}
.rightpart {
    margin-top: 75px;
    float: right;
    width: 50%;
}
.form-cart {
    width: 100%;
    padding-top: 8px;
    min-height: 295px;
}

.shipping-method {
    width: 100%;
}
.shipping_left {
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    padding-top: 65px;
    width: 50%;
    float: left;
    color: #45474b;
}
.shipping_left h3{
    padding: 9px 45px 0 0;
    float: left;
}

.shipping_right {
    text-align: right;
    width: 50%;
    float: right;
}
.cart-wrap {
    margin: 0 auto;
    max-width: 1140px;
    padding-top: 233px;
}
.cart-wrap h1 {
    padding-bottom: 70px;
    text-align: center;
}


.payment-method {
    margin-top: 65px;
}
.payment {
    width: 100%;
    margin-top: 25px;

}
.payment::after {
    content: "";
    width: 100%;
    background-color: #ececed;
    height: 2px;
    display: block;
    margin-top: 86px;

    }


.payment label {
    margin-right: 10px;
}
.coupon-code {
    border-bottom: 1px solid #555963;
    height: 40px;
   }

.coupon-wrap {
    width: 30%;
    float: left;
}
.coupon-code input{
    border: none;
    font-family: 'Lato', sans-serif;
    font-size: 15px;
    color: #e0e0e0;
    outline: none;
}
.coupon-code input:focus{
    border-color: #da8913;
    color: #da8913;
}

.coupon-code p {
    font-family: 'Yrsa', serif;
    font-size: 19px;
    color: #555963;
    margin-top: 20px;
}


.coupon_button {
    float: right;
    background-color: white;
    margin: 8px 0;
    border: none;
    cursor: pointer;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #45474b;
}
.coupon_button:focus {
    outline: none;
}
.coupon_button::after {
    background-repeat: no-repeat;
    content: "";
    background-image: url(../img/Rectangle45.png);
    width: 16px;
    height: 14px;
    display: inline-block;
    margin-left: 5px;
}

.coupon_button::before {
    content: "";
    width: 1px;
    height: 20px;
    background: #555963;
    display: inline-block;
    margin: 0 20px;
    vertical-align: middle;

}

.wrap-footer {
    max-width: 1140px;
    /*width: 100%;*/
    background-color: #f2fdff;
    margin: 0 auto;
}

.coupon-form {
    float: left;
    width: 30%;
}
.proceed-wrap {
    float: right;
    width: 45%;
}
.count-form-inner {
    margin: 0 auto;
    max-width: 1140px;
    padding: 80px 0;
   }

.proceed-checkbox {
    width: 100%;
}
/* ... */

